# textual-code

./: .devcontainer.json  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .textual-code.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  temp.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  ensure-ai-symlinks.sh
.devcontainer/qmd-config/: index.yml
.github/workflows/: check.yml  release.yml
docs/: features.md  settings-guide.md  testing-conventions.md  testing-guide.md
docs/features/: config.md  editor-vscode-differences.md  editor.md  index.md  internals.md  ui.md  workspace.md
scripts/: build-devcontainer.sh  check-language.sh  check-licenses.sh  download-libs-docs.sh  gh-readonly.sh  kill-devconatiner.sh  run-devcontainer.sh
src/: run.py
src/textual_code/: __init__.py  app.py  cancellable_worker.py  command_registry.py  commands.py  config.py  modals.py  pygments_theme_converter.py  search.py  style.tcss  subprocess_tasks.py  utils.py
src/textual_code/grammars/: c.scm  composition.json  cpp.scm  dockerfile.scm  javascript.scm  jsx.scm  kotlin.scm  lua.scm  make.scm  php.scm  ruby.scm  typescript.scm
src/textual_code/modals/: __init__.py  appearance.py  editor_config.py  file_ops.py  find_replace.py  layout.py  (+3 more)
tests/: NOTICE  conftest.py  test_app.py  test_binary_file.py  test_cancellable_worker.py  test_check_licenses.py  test_checkbox_tree.py  test_cli.py  test_click_selection.py  test_clipboard.py  test_close_tab_behavior.py  test_code_editor.py  test_command_shortcuts.py  test_copy_path.py  test_cross_split_drag.py  test_cursor_btn.py  test_debug_windows_spawn.py  test_delete_with_palette.py  test_dim_gitignored.py  test_dim_hidden_files.py  test_directional_leaf.py  test_double_quit.py  test_draggable_tabs_content.py  test_editor_defaults.py  test_editorconfig.py  test_encoding.py  test_encoding_safety.py  test_explorer_auto_refresh.py  test_explorer_compact_folders.py  test_explorer_copy_paste.py  test_explorer_create_prefill.py  test_explorer_create_validation.py  test_explorer_delete.py  test_explorer_file_ops_tree_state.py  test_explorer_highlight.py  test_explorer_move.py  test_explorer_navigation.py  test_explorer_performance.py  test_explorer_rename.py  test_explorer_tree_state.py  (+76 more)
tests/app/: test_app.py  test_app_actions.py  test_binary_file.py  test_check_licenses.py  test_cli.py  test_delete_with_palette.py  test_worker_cancellation.py
tests/config/: test_command_shortcuts.py  test_editor_defaults.py  test_git_status.py  test_line_ending.py  test_open_settings.py  test_path_display_mode.py  test_shortcuts_panel.py  test_syntax_theme.py  test_ui_theme.py
tests/editor/: test_code_editor.py  test_copy_path.py  test_file_load.py  test_git_diff_gutter.py  test_indent.py  test_indentation_guides.py  test_input_shortcuts.py  test_redo.py  test_render_whitespace.py  test_word_wrap.py
tests/explorer/: test_explorer_async_file_ops.py  test_explorer_copy_paste.py  test_explorer_create_prefill.py  test_explorer_create_validation.py  test_explorer_delete.py  test_explorer_file_ops_tree_state.py  test_explorer_highlight.py  test_explorer_move.py  test_explorer_performance.py  test_explorer_rename.py  test_explorer_tree_state.py  test_large_dir_warning.py
tests/find/: test_find.py  test_open_file_command.py  test_regex_search.py  test_workspace_replace.py  test_workspace_search.py
tests/snapshots/: test_snapshots.py
tests/split/: test_cross_split_drag.py  test_move_tab_directional.py  test_split_tree.py  test_split_view.py  test_vertical_split.py
tests/vscode/: NOTICE  test_vscode_move_lines.py  test_vscode_text_editing.py  test_vscode_workspace_search.py
tests/widgets/: test_checkbox_tree.py  test_close_tab_behavior.py  test_cursor_btn.py  test_draggable_tabs_content.py  test_global_footer.py  test_image_preview.py  test_main_view.py  test_modals.py  test_path_search_modal.py  test_progress_toast.py  test_sidebar_resize.py  test_sidebar_scroll.py  test_sidebar_width.py
(+36 files in other folders)
