[project]
name = "textual-code"
version = "0.0.1"
description = "Code editor for who don't know how to use vi"
authors = [
    {name = "Nesswit", email = "rishubil@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "textual[syntax]>=1.0.0",
]

[project.urls]
Repository = "https://github.com/rishubil/textual-code.git"
Changelog = "https://github.com/rishubil/textual-code/blob/master/CHANGELOG.md"

[project.scripts]
textual-code = "textual_code:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.5",
    "textual-dev>=1.7.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Disable fix for unused imports (`F401`) and unused variables (`F841`).
unfixable = ["F401", "F841"]
