[project]
name = "textual-code"
version = "0.2.0"
description = "Code editor for who don't know how to use vi"
authors = [
    {name = "Nesswit", email = "rishubil@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
]
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.5",
    "pathspec>=1.0.4",
    "rich-pixels>=3.0.1",
    "textual[syntax]>=8.0.2",
    "tree-sitter-language-pack>=0.13.0",
    "typer>=0.24.1",
]

[project.urls]
Repository = "https://github.com/rishubil/textual-code.git"
Changelog = "https://github.com/rishubil/textual-code/blob/master/CHANGELOG.md"

[project.scripts]
textual-code = "textual_code:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/textual_code"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-textual-snapshot>=1.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.4",
    "textual-dev>=1.8.0",
    "ty>=0.0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "serial: tests that must not run in parallel",
]
filterwarnings = [
    # Textual internal: DirectoryTree.watch_path coroutine not awaited during teardown
    "ignore:coroutine 'DirectoryTree.watch_path' was never awaited:RuntimeWarning",
    "ignore:Exception ignored in.*DirectoryTree.watch_path:pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Disable fix for unused imports (`F401`) and unused variables (`F841`).
unfixable = ["F401", "F841"]
